src/test/ui/consts/const-eval/dangling.stderr
error: any use of this value will cause an error
  --> $DIR/dangling.rs:8:16
   |
LL | / const TEST: () = { unsafe {
LL | |     let slice: *const [u8] = mem::transmute((1usize, usize::MAX));
LL | |     let _val = &*slice;
   | |                ^^^^^^^ invalid metadata in wide pointer: slice is bigger than largest supported object
LL | |
LL | |
LL | | } };
   | |____-
   |
   = note: `#[deny(const_err)]` on by default

error: aborting due to previous error

